<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <artifactId>restassured-testng-allure</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.10.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>
            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
          </argLine>
          <suiteXmlFiles>
            <suiteXmlFile>src/test/java/testsuites/${suiteFile}</suiteXmlFile>
          </suiteXmlFiles>
          <systemProperties>
            <property>
              <name>allure.results.directory</name>
              <value>${basedir}/target/allure-results</value>
            </property>
          </systemProperties>
          <systemPropertyVariables>
            <environment>${envConfig}</environment>
          </systemPropertyVariables>
          <testFailureIgnore>false</testFailureIgnore>
          <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
          <useSystemClassLoader>false</useSystemClassLoader>
        </configuration>
        <dependencies>
          <dependency>
            <artifactId>aspectjweaver</artifactId>
            <groupId>org.aspectj</groupId>
            <scope>runtime</scope>
            <version>${aspectj.version}</version>
          </dependency>
        </dependencies>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.0.0-M5</version>
      </plugin>
      <plugin>
        <artifactId>allure-maven</artifactId>
        <groupId>io.qameta.allure</groupId>
        <version>2.11.2</version>
      </plugin>

    </plugins>
  </build>
  <dependencies>

    <dependency>
      <artifactId>junit</artifactId>
      <groupId>junit</groupId>
      <scope>test</scope>
      <version>4.13.2</version>
    </dependency>

    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <version>1.18.26</version>
    </dependency>

    <dependency>
      <artifactId>testng</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>ant</artifactId>
          <groupId>org.apache.ant</groupId>
        </exclusion>
      </exclusions>
      <groupId>org.testng</groupId>
      <version>7.7.0</version>
    </dependency>

    <dependency>
      <artifactId>maven-site-plugin</artifactId>
      <groupId>org.apache.maven.plugins</groupId>
      <scope>test</scope>
      <type>maven-plugin</type>
      <version>4.0.0-M3</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
    <dependency>
      <artifactId>httpclient5</artifactId>
      <groupId>org.apache.httpcomponents.client5</groupId>
      <version>5.1.3</version>
    </dependency>

    <dependency>
      <!--  Used to provide NotNull annotations -->
      <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
      <artifactId>validation-api</artifactId>
      <groupId>javax.validation</groupId>
      <version>2.0.1.Final</version>
    </dependency>

    <dependency>
      <artifactId>commons-io</artifactId>
      <groupId>commons-io</groupId>
      <version>2.11.0</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml -->
    <dependency>
      <artifactId>jackson-dataformat-yaml</artifactId>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <version>2.14.0</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
    <dependency>
      <artifactId>jackson-databind</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
      <version>2.14.0</version>
    </dependency>

    <dependency>
      <artifactId>jackson-core</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
      <version>2.14.0</version>
    </dependency>

    <dependency>
      <artifactId>javax.mail</artifactId>
      <groupId>com.sun.mail</groupId>
      <version>1.6.2</version>
    </dependency>

    <dependency>
      <artifactId>mailapi</artifactId>
      <groupId>javax.mail</groupId>
      <scope>compile</scope>
      <version>1.4.3</version>
    </dependency>

    <dependency>
      <artifactId>json</artifactId>
      <groupId>org.json</groupId>
      <version>20230227</version>
    </dependency>

    <dependency>
      <artifactId>log4j-api</artifactId>
      <groupId>org.apache.logging.log4j</groupId>
      <version>2.20.0</version>
    </dependency>
    <dependency>
      <artifactId>log4j-core</artifactId>
      <groupId>org.apache.logging.log4j</groupId>
      <version>2.20.0</version>
    </dependency>
    <dependency>
      <artifactId>annotations</artifactId>
      <groupId>org.jetbrains</groupId>
      <scope>compile</scope>
      <version>24.0.1</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.awaitility/awaitility -->
    <dependency>
      <artifactId>awaitility</artifactId>
      <groupId>org.awaitility</groupId>
      <version>4.2.0</version>
    </dependency>

    <dependency>
      <!-- Override outdated version used by allure -->
      <!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
      <artifactId>tika-core</artifactId>
      <groupId>org.apache.tika</groupId>
      <version>2.7.0</version>
    </dependency>

    <dependency>
      <artifactId>org.jacoco.agent</artifactId>
      <classifier>runtime</classifier>
      <groupId>org.jacoco</groupId>
      <version>${jacoco.version}</version>
    </dependency>

    <dependency>
      <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
      <!-- Override the version from testng and jason-dataformat-yaml -->
      <artifactId>snakeyaml</artifactId>
      <groupId>org.yaml</groupId>
      <version>2.0</version>
    </dependency>

    <dependency>
      <artifactId>json-schema-validator</artifactId>
      <groupId>io.rest-assured</groupId>
      <scope>test</scope>
      <version>${rest.assured.version}</version>
    </dependency>

    <dependency>
      <artifactId>spring-mock-mvc</artifactId>
      <groupId>io.rest-assured</groupId>
      <scope>test</scope>
      <version>${rest.assured.version}</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
    <dependency>
      <artifactId>allure-testng</artifactId>
      <groupId>io.qameta.allure</groupId>
      <version>${allure.version}</version>
    </dependency>

    <dependency>
      <artifactId>allure-rest-assured</artifactId>
      <groupId>io.qameta.allure</groupId>
      <version>${allure.version}</version>
    </dependency>

    <dependency>
      <artifactId>rest-assured</artifactId>
      <groupId>io.rest-assured</groupId>
      <version>${rest.assured.version}</version>
     </dependency>
    <dependency>
      <artifactId>gson</artifactId>
      <groupId>com.google.code.gson</groupId>
      <version>2.10.1</version>
    </dependency>

    <dependency>
      <artifactId>slf4j-api</artifactId>
      <groupId>org.slf4j</groupId>
      <version>2.0.5</version>
    </dependency>
    <dependency>
      <artifactId>slf4j-simple</artifactId>
      <groupId>org.slf4j</groupId>
      <scope>test</scope>
      <version>2.0.5</version>
    </dependency>

  </dependencies>
  <groupId>com.project.template</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>restassured-testng-allure</name>
  <packaging>jar</packaging>

  <properties>
    <allure.version>2.21.0</allure.version>
    <aspectj.version>1.9.9.1</aspectj.version>
    <envConfig/>
    <jacoco.version>0.8.8</jacoco.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <property name="target.dir" value="${base.dir}/target"/>
    <rest.assured.version>5.3.0</rest.assured.version>
    <suiteFile/>
  </properties>

  <reporting>
    <excludeDefaults>true</excludeDefaults>
    <plugins>
      <plugin>
        <artifactId>allure-maven</artifactId>
        <configuration>
          <reportVersion>${allure.version}</reportVersion>
        </configuration>
        <groupId>io.qameta.allure</groupId>
        <version>2.11.2</version>
      </plugin>
    </plugins>
  </reporting>

  <url>http://maven.apache.org</url>

  <version>1.0.0-SNAPSHOT</version>

</project>
